add_subdirectory(ann_b2b)
add_subdirectory(announce_transfer)
add_subdirectory(announcement)
add_subdirectory(annrecorder)
add_subdirectory(callback)
add_subdirectory(click2dial)
if(LIBEVENT2_FOUND)
  add_subdirectory(conference)
endif(LIBEVENT2_FOUND)
if(MYSQLPP_FOUND)
  add_subdirectory(db_reg_agent)
endif(MYSQLPP_FOUND)
add_subdirectory(diameter_client)
add_subdirectory(dsm)
add_subdirectory(early_announce)
add_subdirectory(early_dbprompt)
# ADD_SUBDIRECTORY(examples)
if(MISDN_FOUND)
  # ADD_SUBDIRECTORY(gateway)
endif(MISDN_FOUND)
if(LIBEV_FOUND)
  add_subdirectory(jsonrpc)
endif(LIBEV_FOUND)
add_subdirectory(mobile_push)
add_subdirectory(monitoring)
if(LAME_FOUND)
  add_subdirectory(mp3)
endif(LAME_FOUND)
add_subdirectory(msg_storage)
add_subdirectory(mwi)
add_subdirectory(precoded_announce)
add_subdirectory(reg_agent)
add_subdirectory(registrar_client)
if(RTMP_FOUND AND SPEEX_FOUND)
  add_subdirectory(rtmp)
endif(RTMP_FOUND AND SPEEX_FOUND)
add_subdirectory(sbc)
add_subdirectory(voicebox)
add_subdirectory(voicemail)
add_subdirectory(webconference)
add_subdirectory(xmlrpc2di)

# Python-dependent modules
if(Python3_FOUND)
  add_subdirectory(conf_auth)
  add_subdirectory(ivr)
  add_subdirectory(mailbox)
  add_subdirectory(pin_collect)

  if(SIP_FOUND)
    message(
      WARNING
        "The py_sems module will not be built because the code has not been upgraded to interface with Python3 SIP."
    )
    # ADD_SUBDIRECTORY(py_sems)
  endif(SIP_FOUND)

  # ADD_SUBDIRECTORY(twit)
endif(Python3_FOUND)
